force-app/main/default/objects/acheck__Lookup__c/acheck__Lookup__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Lookup Settings</description>
    <label>Lookup</label>
</CustomObject>