force-app/main/default/objects/acheck__Lookup__c/fields/acheck__FirstLine__c.field-meta.xml
<CustomField>
    <fullName>acheck__FirstLine__c</fullName>
    <description>Comma-separated list of Column Names for the first line (default: Name)</description>
    <inlineHelpText>Comma-separated list of Column Names for the first line (default: Name)</inlineHelpText>
    <label>First Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>