force-app/main/default/objects/acheck__Lookup__c/fields/acheck__FullyQualifiedName__c.field-meta.xml
<CustomField>
    <fullName>acheck__FullyQualifiedName__c</fullName>
    <description>Fully Qualified Name of the lookup column, e.g., Account.ParentId, Account.OwnerId</description>
    <inlineHelpText>Fully Qualified Name of the lookup column, e.g., Account.ParentId, Account.OwnerId</inlineHelpText>
    <label>Fully Qualified Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>