force-app/main/default/objects/acheck__Lookup__c/fields/acheck__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>acheck__ObjectName__c</fullName>
    <description>Object Name for the lookup (object to be searched), e.g., Account, User</description>
    <inlineHelpText>Object Name for the lookup (object to be searched), e.g., Account, User</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>