force-app/main/default/objects/acheck__Lookup__c/fields/acheck__OrderBy__c.field-meta.xml
<CustomField>
    <fullName>acheck__OrderBy__c</fullName>
    <description>Order By clause, e.g., CreatedDate DESC</description>
    <inlineHelpText>Order By clause, e.g., CreatedDate DESC</inlineHelpText>
    <label>Order By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>