force-app/main/default/objects/acheck__Lookup__c/fields/acheck__SecondLine__c.field-meta.xml
<CustomField>
    <fullName>acheck__SecondLine__c</fullName>
    <description>Comma-separated list of Column Names for the second line</description>
    <inlineHelpText>Comma-separated list of Column Names for the second line</inlineHelpText>
    <label>Second Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>