force-app/main/default/objects/acheck__Lookup__c/fields/acheck__WhereClause__c.field-meta.xml
<CustomField>
    <fullName>acheck__WhereClause__c</fullName>
    <description>Lookup restriction - where clause</description>
    <inlineHelpText>Lookup restriction - where clause</inlineHelpText>
    <label>Where Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>